<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/guideline_top"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="@dimen/logo_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_avengers_end_game_logo"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:drawablePadding="8dp"
            android:text="@string/back"
            android:textColor="@color/white_opacity_50"
            android:textSize="@dimen/text_size_normal"
            app:drawableStartCompat="@drawable/button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_top" />

        <TextView
            android:id="@+id/tv_film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="@dimen/film_name_top_margin"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:text="@string/film_name"
            tools:text="@string/film_name_tools"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_age_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="228dp"
            android:text="@string/age_rate"
            tools:text="@string/age_rate_tools"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:text="@string/genres"
            tools:text="@string/genres_tools"
            android:textColor="@color/color_text_genres"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_film_name" />

        <ImageView
            android:id="@+id/img_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reviews_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_reviews_number"
            app:srcCompat="@drawable/star_icon_full"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintBottom_toBottomOf="@+id/img_star1"
            app:layout_constraintStart_toEndOf="@id/img_star1"
            app:layout_constraintTop_toTopOf="@+id/img_star1"
            app:srcCompat="@drawable/star_icon_full"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintBottom_toBottomOf="@+id/img_star1"
            app:layout_constraintStart_toEndOf="@id/img_star2"
            app:layout_constraintTop_toTopOf="@+id/img_star1"
            app:srcCompat="@drawable/star_icon_full"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintBottom_toBottomOf="@+id/img_star1"
            app:layout_constraintStart_toEndOf="@id/img_star3"
            app:layout_constraintTop_toTopOf="@+id/img_star1"
            app:srcCompat="@drawable/star_icon_full"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintBottom_toBottomOf="@+id/img_star1"
            app:layout_constraintStart_toEndOf="@id/img_star4"
            app:layout_constraintTop_toTopOf="@+id/img_star1"
            app:srcCompat="@drawable/star_icon_empty"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_reviews_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="4dp"
            android:text="@string/reviews_number"
            tools:text="@string/reviews_number_tools"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_star5"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres" />


        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:text="@string/storyline"
            android:textColor=" #ECECEC"
            android:textSize="@dimen/text_size_bigger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_number" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:text="@string/description"
            tools:text="@string/description_tools"
            android:textColor=" #ECECEC"
            android:textSize="@dimen/text_size_bigger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline" />

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:text="@string/cast"
            android:textColor=" #ECECEC"
            android:textSize="@dimen/text_size_bigger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <ImageView
            android:id="@+id/img_actor1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toStartOf="@+id/img_actor2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cast"
            app:layout_constraintDimensionRatio="1,1"
            app:srcCompat="@drawable/actor_avatar_robert_downey_jr"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_actor2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_actor1"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/img_actor3"
            app:layout_constraintStart_toEndOf="@id/img_actor1"
            app:layout_constraintTop_toTopOf="@+id/img_actor1"
            app:srcCompat="@drawable/actor_avatar_chris_evans"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_actor3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_actor1"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/img_actor4"
            app:layout_constraintStart_toEndOf="@+id/img_actor2"
            app:layout_constraintTop_toTopOf="@+id/img_actor1"
            app:srcCompat="@drawable/actor_avatar_chris_hemsworth"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_actor4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/start_end_margin"
            app:layout_constraintBottom_toBottomOf="@+id/img_actor1"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_actor3"
            app:layout_constraintTop_toTopOf="@+id/img_actor1"
            app:srcCompat="@drawable/actor_avatar_mark_ruffalo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/actor1_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_name"
            tools:text="@string/actor1_name_tools"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/color_actor_name"
            app:layout_constraintEnd_toEndOf="@+id/img_actor1"
            app:layout_constraintStart_toStartOf="@+id/img_actor1"
            app:layout_constraintTop_toBottomOf="@+id/img_actor1" />

        <TextView
            android:id="@+id/actor2_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_name"
            tools:text="@string/actor2_name_tools"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/color_actor_name"
            app:layout_constraintEnd_toEndOf="@+id/img_actor2"
            app:layout_constraintStart_toStartOf="@+id/img_actor2"
            app:layout_constraintTop_toBottomOf="@+id/img_actor2" />

        <TextView
            android:id="@+id/actor3_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_name"
            tools:text="@string/actor3_name_tools"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/color_actor_name"
            app:layout_constraintEnd_toEndOf="@+id/img_actor3"
            app:layout_constraintStart_toStartOf="@+id/img_actor3"
            app:layout_constraintTop_toBottomOf="@+id/img_actor3" />

        <TextView
            android:id="@+id/actor4_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_name"
            tools:text="@string/actor4_name_tools"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/color_actor_name"
            app:layout_constraintEnd_toEndOf="@+id/img_actor4"
            app:layout_constraintStart_toStartOf="@+id/img_actor4"
            app:layout_constraintTop_toBottomOf="@+id/img_actor4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>