<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/movie_shape"
    android:layout_margin="8dp"
    android:padding="@dimen/padding_movies_list_item_shape">

    <ImageView
        android:id="@+id/img_movie_logo_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_film_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@drawable/tools_movie_logo_small" />

    <View
        android:id="@+id/img_movie_gradient_mask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_mask"
        app:layout_constraintBottom_toTopOf="@id/tv_film_name"
        app:layout_constraintEnd_toEndOf="@id/img_movie_logo_small"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/img_movie_logo_small"
        app:layout_constraintTop_toTopOf="@id/img_movie_logo_small" />

    <ImageView
        android:id="@+id/img_rounded_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="-4dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_age_rate"
        app:layout_constraintEnd_toEndOf="@id/tv_age_rate"
        app:layout_constraintStart_toStartOf="@id/tv_age_rate"
        app:layout_constraintTop_toTopOf="@id/tv_age_rate"
        app:srcCompat="@drawable/rounded_rectangle"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_age_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:text="@string/age_rate"
        tools:text="@string/age_rate_tools"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toStartOf="@id/img_movie_logo_small"
        app:layout_constraintTop_toTopOf="@id/img_movie_logo_small" />

    <ImageView
        android:id="@+id/img_like_empty"
        android:layout_width="@dimen/img_like_width"
        android:layout_height="@dimen/img_like_height"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_age_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_age_rate"
        app:srcCompat="@drawable/like"
        android:visibility="visible"
        tools:visibility="visible"
        tools:ignore="ContentDescription" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/rating_bar_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_reviews_number"
        app:layout_constraintStart_toStartOf="@id/img_movie_logo_small"
        app:layout_constraintTop_toTopOf="@+id/tv_reviews_number"
        tools:rating="3" />

    <TextView
        android:id="@+id/tv_reviews_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:textColor="#6D6D80"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@+id/img_movie_logo_small"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        tools:ignore="ContentDescription"
        tools:text="@string/reviews_number_tools" />

    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:textColor="@color/color_text_genres"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@id/tv_reviews_number"
        app:layout_constraintStart_toStartOf="@id/ratingBar"
        tools:text="@string/genres_tools" />

    <TextView
        android:id="@+id/tv_film_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/film_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_bigger"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/img_movie_logo_small"
        app:layout_constraintTop_toBottomOf="@id/img_movie_logo_small"
        tools:text="@string/film_name_tools" />

    <TextView
        android:id="@+id/tv_film_time_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/movie_duration_in_minutes"
        tools:text="@string/movie_duration_in_minutes_tools"
        android:textColor="@color/color_film_length"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/img_movie_logo_small"
        app:layout_constraintStart_toStartOf="@id/img_movie_logo_small"
        app:layout_constraintTop_toBottomOf="@id/tv_film_name" />


</androidx.constraintlayout.widget.ConstraintLayout>